# MyAgent

./: .gitignore
backend/: .env  pyproject.toml
backend/logs/compliance/: trace-20260521-082339-904a75c2.json  trace-20260521-083705-85daf5f6.json
backend/src/: __init__.py  agent.py  config.py  main.py  models.py  prompts.py
backend/src/data/: __init__.py  laws.py
backend/src/data/laws/: 中华人民共和国价格法.txt  中华人民共和国反不正当竞争法.txt  中华人民共和国反垄断法.txt  中华人民共和国招标投标法.txt  中华人民共和国政府采购法.txt  中华人民共和国电子商务法.txt
backend/src/services/: case_generator.py  case_parser.py  compliance_reviewer.py  embedding.py  generator.py  law_indexer.py  law_repository.py  law_retriever.py  law_router.py  planner.py  qdrant_memory.py  rag_service.py  reporter.py  search.py  summarizer.py  trace_logger.py  vector_store.py  verifier.py
backend/src/tools/: __init__.py  base.py  case_query.py  data_validation.py  fact_check.py  law_search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: Placeholder.vue
frontend/src/layouts/: AppLayout.vue
frontend/src/pages/: CaseGenerate.vue  CaseParse.vue  ComplianceReview.vue  Dashboard.vue  History.vue  RegulationSearch.vue  Report.vue  Research.vue  Settings.vue  Workflow.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
