[project]
name = "law-research-agent"
version = "0.1.0"
description = "Legal research and compliance review assistant powered by LangGraph."
authors = [
    { name = "Law Agent Team" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "dashscope>=1.20.0",
    "langchain-core>=0.3.0",
    "tavily-python>=0.5.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "uvicorn[standard]>=0.32.0",
    "ddgs>=9.6.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
nlp = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "jieba>=0.42.1",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.7.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
